--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.3",
+    "@angular/animations": "^11.2.9",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.3",
+    "@angular/material": "^11.2.8",
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
-    "rxjs": "~6.6.0",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.24.0",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -25,6 +31,7 @@
     "@angular/cli": "~11.2.2",
     "@angular/compiler-cli": "~11.2.3",
     "@types/node": "^12.11.1",
+    "sass-loader": "^7.1.0",
     "typescript": "~4.1.2"
   }
 }
